fixed some bugs to deploy the porject on render